--- a/server-side/task-service/docker/docker-compose.yml
+++ b/server-side/task-service/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres:14-alpine
     container_name: postgres
     restart: unless-stopped
     environment:
@@ -12,15 +12,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata14:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 5s
       timeout: 3s
       retries: 10
 
-  # Optional: Web UI for Postgres
-  # Access at http://localhost:5050 (email: admin@local, password: admin)
+  # Optional DB UI
   pgadmin:
     image: dpage/pgadmin4:8
     container_name: pgadmin
@@ -34,11 +33,10 @@ services:
     ports:
       - "5050:80"
 
-  # Optional: your Spring Boot app (uncomment when you have a Dockerfile)
+  # (Your Spring Boot app stays the same and runs Flyway on startup)
   # app:
   #   build: .
   #   container_name: spring-app
-  #   restart: unless-stopped
   #   depends_on:
   #     postgres:
   #       condition: service_healthy
@@ -51,4 +49,4 @@ services:
   #     - "8080:8080"
 
 volumes:
-  pgdata:
+  pgdata14:
