--- a/server-side/task-service/docker/docker-compose.yml
+++ b/server-side/task-service/docker/docker-compose.yml
@@ -12,41 +12,42 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata14:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 5s
       timeout: 3s
       retries: 10
 
-  # Optional DB UI
-  pgadmin:
-    image: dpage/pgadmin4:8
-    container_name: pgadmin
+  minio:
+    image: minio/minio:latest
+    container_name: minio
     restart: unless-stopped
-    depends_on:
-      postgres:
-        condition: service_healthy
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@local
-      PGADMIN_DEFAULT_PASSWORD: admin
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: miniosecret123
+    command: server /data --console-address ":9001"
     ports:
-      - "5050:80"
+      - "9000:9000"  # S3 API
+      - "9001:9001"  # Web console
+    volumes:
+      - ./data/minio:/data
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsSL http://localhost:9000/minio/health/live || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
-  # (Your Spring Boot app stays the same and runs Flyway on startup)
-  # app:
-  #   build: .
-  #   container_name: spring-app
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/appdb
-  #     SPRING_DATASOURCE_USERNAME: appuser
-  #     SPRING_DATASOURCE_PASSWORD: secretpassword
-  #     SPRING_JPA_HIBERNATE_DDL_AUTO: validate
-  #   ports:
-  #     - "8080:8080"
-
-volumes:
-  pgdata14:
+  minio-create-bucket:
+    image: minio/mc:latest
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+        mc alias set local http://minio:9000 minio miniosecret123 &&
+        mc mb -p local/app-bucket || true &&
+        exit 0
+      "
+    restart: "no"
