--- a/client-side/package.json
+++ b/client-side/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
-    "vite": "^4.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "tailwindcss": "^3.4.4",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "tailwindcss": "^3.4.4",
+    "vite": "^4.4.0"
   }
 }
