--- a/server-side/task-service/src/main/resources/application.yml
+++ b/server-side/task-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
   servlet:
     context-path: /
 spring:
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:postgresql://localhost:5432/appdb
     username: appuser
@@ -30,7 +32,7 @@ security:
   jwt:
     access-secret-b64:  "rXzZ72WfTUG6mhO7r9wZ69qJ5S8N2duU2to9Nw5a3mY="
     refresh-secret-b64: "m3cVvOdvptRzO2pnpqHgFfL6b+Kmtg5vFxt8jEsXXlw="
-    access-ttl:  PT15M   # 15 minutes
+    access-ttl:  P1D  # 1 day
     refresh-ttl: P7D     # 7 days
 
 
