--- a/client-side/package.json
+++ b/client-side/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.1"
