--- a/client-side/package.json
+++ b/client-side/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "vite build --mode prod",
     "serve": "vite preview"
   },
   "dependencies": {
