--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy Java App
+name: Build & Deploy App
 
 on:
   push:
@@ -9,32 +9,61 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
+      # Debug server secrets
+      - name: Debug server secrets
+        run: |
+          if [ -z "${{ secrets.SERVER_SSH_KEY }}" ]; then
+            echo "❌ SERVER_SSH_KEY is missing"
+            exit 1
+          fi
+          if [ -z "${{ secrets.SERVER_HOST }}" ]; then
+            echo "❌ SERVER_HOST is missing"
+            exit 1
+          fi
+          if [ -z "${{ secrets.SERVER_USER }}" ]; then
+            echo "❌ SERVER_USER is missing"
+            exit 1
+          fi
+          echo "✅ All server secrets are set"
+
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Setup Java 17 (Temurin)
+      # Setup Java
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Build JAR with Gradle (skip tests)
-      - name: Build JAR
+      # Build backend JAR
+      - name: Build backend JAR
         working-directory: server-side/task-service
-        run: ./gradlew clean build -x test
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build -x test
 
-      # 4. Log in to GHCR
+      # Check GHCR token
+      - name: Check GHCR token
+        run: |
+          if [ -z "${{ vars.PTIT_GITHUB_TOKEN }}" ]; then
+            echo "❌ PTIT_GITHUB_TOKEN is NOT set!"
+            exit 1
+          else
+            echo "✅ PTIT_GITHUB_TOKEN is set"
+          fi
+
+      # Login to GHCR
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: dodt1306
-          password: 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
+          password: ${{ vars.PTIT_GITHUB_TOKEN }}
 
-      # 5. Build & Push Docker image (multi-arch)
-      - name: Build & Push Docker image
+      # Build & Push backend
+      - name: Build & Push backend Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./server-side/task-service
@@ -42,8 +71,22 @@ jobs:
           push: true
           tags: ghcr.io/dodt1306/to-do-list-app:latest
           platforms: linux/arm64
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      # 6. Deploy to remote server via SSH
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      # Build & Push frontend
+      - name: Build & Push frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./client-side
+          file: ./client-side/Dockerfile
+          push: true
+          tags: ghcr.io/dodt1306/to-do-list-frontend:latest
+          platforms: linux/arm64
+
+      # Deploy via SSH
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
