--- a/server-side/task-service/Dockerfile
+++ b/server-side/task-service/Dockerfile
@@ -1,12 +1,5 @@
-# Stage 1: Build JAR
-FROM gradle:8.5-jdk17 AS builder
-WORKDIR /app
-COPY . .
-RUN ./gradlew clean build -x test
-
-# Stage 2: Run application
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar app.jar
+COPY build/libs/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
