add: locale message handling backend

--- a/server-side/task-service/src/main/resources/application-prod.yml
+++ b/server-side/task-service/src/main/resources/application-prod.yml
@@ -1,10 +1,8 @@
 spring:
-  profiles:
-    active: prod
   datasource:
     url: jdbc:postgresql://nhom4.choi.one:5432/appdb
     username: appuser1
-    password: ***********
+    password: secretpassword123
     driver-class-name: org.postgresql.Driver
 
 minio:
